# functions-iterating

./: CMakeLists.txt  README.md  defines.h  linear_function.h  main.cpp  processor.h  queue.h  rational.h  save_integral.h  trie.h  with_multiplicity.h
